# vibe-check

./: .flake8  .gitignore  LICENSE  README.md  blog-post.md  pyproject.toml
.github/workflows/: ci.yml
src/vibe_check/: __init__.py  analyzer.py  cli.py  reporter.py  scoring.py
src/vibe_check/detectors/: __init__.py  comments.py  imports.py  naming.py  placeholders.py  ratio.py  repetitive.py  security.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_cli.py  test_detectors.py  test_scoring.py
